Fix space after navbar

--- a/main_page/templates/main_page/event1.html
+++ b/main_page/templates/main_page/event1.html
@@ -97,7 +97,7 @@
                         <!-- Post Author Widget -->
                         <div class="post-author-widget">
                             <!-- Thumbnail -->
-                            <button type="button" class="btn btn-primary">Register Now!!!</button>
+                            <a href="{% url 'main_page:register_for_event' event.id  %}" class="btn btn-primary">Register Now!!!</a>
                             <!-- Co-ordinator Content -->
                             <div class="post-author-content">
                                 
