--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link href="{% static 'main_page/css/style.css' %}" rel="stylesheet">
     <title>{% block title %} Advitiya{%endblock%} </title>
 </head>
@@ -25,7 +26,7 @@
                 <nav class="classy-navbar justify-content-between" id="conferNav">
                     <!-- Logo -->
                     <a class="navbar-brand" href="{% url 'main_page:index' %}">
-                    <img src="{% static 'ca/img/logo.png' %}" width="150" height="80" alt="">
+                        <img src="{% static 'ca/img/logo.png' %}" width="150" height="80" alt="">
                     </a>
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -38,7 +39,7 @@
                         <div class="classycloseIcon">
                             <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                         </div>
-                    
+
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul id="nav">
@@ -67,21 +68,23 @@
 
                             <!-- Signing in -->
                             {% if not user.is_authenticated %}
-                            <a href="{% provider_login_url 'google' %}?next={% url 'main_page:index' %}" class="vcenter"><img
-                                    src="{% static 'ca/img/gsignin.png' %}" class='gsignin-btn' height="50px" width="50px" alt="" srcset=""></a>
+                            <a href="{% provider_login_url 'google' %}?next={% url 'main_page:index' %}"
+                                class="vcenter"><img src="{% static 'ca/img/gsignin.png' %}" class='gsignin-btn'
+                                    height="50px" width="50px" alt="" srcset=""></a>
                             {% else %}
-                            <a href="{% url 'main_page:account_logout' %}?next={% url 'main_page:index' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i 
-                                class="fas fa-sign-out-alt"></i>SIGN OUT</a>
+                            <a href="{% url 'main_page:account_logout' %}?next={% url 'main_page:index' %}"
+                                class="btn btn-secondary" style="margin-bottom: 3px;"><i
+                                    class="fas fa-sign-out-alt"></i>SIGN OUT</a>
 
                             {% endif %}
                         </div>
                     </div>
-                        <!-- Nav End -->
+                    <!-- Nav End -->
                 </nav>
             </div>
         </div>
     </header>
-    
+
     {% block body %}
 
 
@@ -97,14 +100,18 @@
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                             <!-- Footer Logo -->
                             <a href="#" class="footer-logo"><img src="{% static 'ca/img/logo.png' %}" alt=""></a>
-                            <p style="margin: 2px;">The upcoming Advitiya will be held completely in the Main Campus,IIT Ropar</p>
+                            <p style="margin: 2px;">The upcoming Advitiya will be held completely in the Main Campus,IIT
+                                Ropar</p>
 
                             <!-- Social Info -->
                             <div class="social-info">
-                                <a href="https://www.facebook.com/advitiya.iitrpr/"><i class="zmdi zmdi-facebook"></i></a>
-                                <a href="https://www.instagram.com/advitiya_iitrpr/?hl=en"><i class="zmdi zmdi-instagram"></i></a>
-                                <a href="https://twitter.com/advitiyaiitrpr?lang=en"><i class="zmdi zmdi-twitter"></i></a>
-                                
+                                <a href="https://www.facebook.com/advitiya.iitrpr/"><i
+                                        class="zmdi zmdi-facebook"></i></a>
+                                <a href="https://www.instagram.com/advitiya_iitrpr/?hl=en"><i
+                                        class="zmdi zmdi-instagram"></i></a>
+                                <a href="https://twitter.com/advitiyaiitrpr?lang=en"><i
+                                        class="zmdi zmdi-twitter"></i></a>
+
                             </div>
                         </div>
                     </div>
@@ -114,10 +121,11 @@
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                             <!-- Widget Title -->
                             <h5 class="widget-title">Location</h5>
-                    <p>Indian Institute of Technology Ropar, Bara Phool, Birla Seed Farms, Rupnagar,Punjab, INDIA 140001
-                    </p>
-                    <p ><i class="fa fa-phone mr-3"></i>+91 8619174962</p>
-                    <p><i class="fa fa-envelope-o mr-3"></i>advitiya@iitrpr.ac.in</p>
+                            <p>Indian Institute of Technology Ropar, Bara Phool, Birla Seed Farms, Rupnagar,Punjab,
+                                INDIA 140001
+                            </p>
+                            <p><i class="fa fa-phone mr-3"></i>+91 8619174962</p>
+                            <p><i class="fa fa-envelope-o mr-3"></i>advitiya@iitrpr.ac.in</p>
                         </div>
                     </div>
 
@@ -138,7 +146,7 @@
                     </div>
 
                     <!-- Single Footer Widget Area -->
-                    
+
                 </div>
             </div>
         </div>
@@ -178,9 +186,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://kit.fontawesome.com/a9af552946.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
@@ -189,7 +196,7 @@
         crossorigin="anonymous"></script>
     <script src="{% static 'main_page/js/confer.bundle.js' %}"></script>
     <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
-    <script src="{% static 'main_page/js/active.js' %}"></script>    
+    <script src="{% static 'main_page/js/active.js' %}"></script>
     <!-- <script src="{% static 'main_page/js/jquery.min.js' %}"></script> -->
 </body>
 
