--- a/main_page/templates/main_page/show_info.html
+++ b/main_page/templates/main_page/show_info.html
@@ -2,20 +2,22 @@
 {% load static %}
 
 {% block body %}
-<section class="breadcrumb-area bg-img bg-gradient-overlay jarallax" style="background-image: url(img/bg-img/37.jpg);">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
+<section class="bg-img bg-gradient-overlay jarallax">
+    <div class="container">
+        <div class="row align-items-center">
             <div class="col-12">
-                <div class="breadcrumb-content">
-                    <h2 class="page-title">{{message}}</h2>
-                    <nav aria-label="breadcrumb">
-                        
-                    </nav>
+                <br><br>
+            </div>
+            <div class="breadcrumb-content">
+                <div class="alert alert-primary" role="alert">
+                    {{ message | safe }}
                 </div>
+                <br><br><br>
             </div>
         </div>
     </div>
+    </div>
 </section>
-    
+
 
 {% endblock %}
