Fix formset label color

--- a/main_page/templates/main_page/register_team.html
+++ b/main_page/templates/main_page/register_team.html
@@ -5,6 +5,15 @@
 {% block body %}
 <section class="bg-img bg-gradient-overlay jarallax">
     <div class="container">
+        <style>
+            label {
+                color: white;
+            }
+
+            .invalid-feedback {
+                color: red !important;
+            }
+        </style>
         <div class="row align-items-center">
             <div class="col-md-6">
                 <br>
