--- a/main_page/templates/main_page/participation_form.html
+++ b/main_page/templates/main_page/participation_form.html
@@ -19,7 +19,7 @@
                 <br>
                 <div class="breadcrumb-content">
                     <h2 class="page-title">Register As Participant</h2>
-                    <form method="POST" action="{% url 'main_page:register_as_participant' %}">
+                    <form method="POST">
                         {% csrf_token %}
                         {{ participationForm | crispy }}
                         <button type="submit" class="btn btn-primary">Submit</button>
