added team section and improved event page

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -46,7 +46,7 @@
                                 <li><a href="{% url 'main_page:index' %}">Home</a></li>
                                 <li><a href="{% url 'TSP:home' %}">TSP</a>
                                 </li>
-                                <li><a href="#">Team</a></li>
+                                <li><a href="#Our_Team">Team</a></li>
                                 <li><a href="{% url 'main_page:events'%}">Events</a>
                                     <ul class="dropdown">
                                         {% for category in CATEGORY_CHOCIES %}
