--- a/main_page/static/main_page/css/style.css
+++ b/main_page/static/main_page/css/style.css
@@ -566,7 +566,7 @@ h3 {
   z-index: 1;
   margin-bottom: 60px; }
   .section-heading-3 p {
-    color: black;
+    color: white;
     letter-spacing: 1px;
     text-transform: uppercase;
     margin-bottom: 0;
@@ -594,7 +594,7 @@ h3 {
   width: 40px;
   height: 40px;
   bottom: 40px;
-  background-color: black;
+  
   color: #ffffff;
   text-align: center;
   -webkit-transition-duration: 500ms;
@@ -1539,7 +1539,7 @@ h3 {
       letter-spacing: 1px;
       margin-bottom: 10px; }
     .single-speaker-area .speaker-info p {
-      color: black;
+      color: white;
       margin-bottom: 0;
       letter-spacing: 1px;
       line-height: 1; }
