--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -2,77 +2,22 @@
 {% load static %}
 
 {% block body %}
-<section class="breadcrumb-area bg-img bg-gradient-overlay jarallax"
-    style="background-image: url(static/main_page/img/bg-img/1.jpg);">
-    <br>
-    <br>
-    <div class="carousel-wrapper">
-        <div class="carousel" data-flickity>
-            <div class="carousel-cell">
-                <h3>Club 1</h3>
-                <a class="more" href="#Aeromodelling">Explore more
-                    <img    
-                        src="{% static 'main_page/img/club_logo/aeromodelling.png' %}" />
-                </a>
-            </div>
-            <div class="carousel-cell">
-                <h3>Club 2</h3>
-                <a class="more" href="#Finance">Explore more
-                    <img
-                        src="{% static 'main_page/img/club_logo/fincom.png' %}" />
-                </a>
-            </div>
-            <div class="carousel-cell">
-                <h3>Club 3</h3>
-                <a class="more" href="#Coding">Explore more
-                    <img
-                        src="{% static 'main_page/img/club_logo/coding.png' %}" />
-                </a>
-            </div>
-            <div class="carousel-cell">
-                <h3>Club 4</h3>
-                <a class="more" href="#Robotics">Explore more
-                    <img
-                        src="{% static 'main_page/img/club_logo/RoboticsClub.png' %}" />
-                </a>
-            </div>
-            <div class="carousel-cell">
-                <h3>Club 5</h3>
-                <a class="more" href="#Automotive">Explore more
-                    <img
-                        src="{% static 'main_page/img/club_logo/automotive.png' %}" />
-                </a>
-            </div>
-            <div class="carousel-cell">
-                <h3>Club 6</h3>
-                <a class="more" href="#CAD">Explore more
-                    <img
-                        src="{% static 'main_page/img/club_logo/cim.png' %}" />
-                </a>
-            </div>
-            <div class="carousel-cell">
-                <h3>Club 7</h3>
-                <a class="more" href="#Astronomy">Explore more
-                    <img
-                        src="{% static 'main_page/img/club_logo/zenith.png' %}" />
-                </a>
-            </div>
-            <div class="carousel-cell">
-                <h3>Club 8</h3>
-                <a class="more" href="#Coding">Explore more
-                    <img
-                        src="{% static 'main_page/img/club_logo/softcom.png' %}" />
-                </a>
-            </div>
-            <div class="carousel-cell">
-                <h3>Club 9</h3>
-                <a class="more" href="#Photo Editing">Explore more
-                    <img
-                        src="{% static 'main_page/img/club_logo/Logo.png' %}" />
-                </a>
-            </div>
-        </div>
+<section class="breadcrumb-area bg-img bg-gradient-overlay jarallax">
+    <div class="container">
+        <br>
+        <br>
+        <p>
+            <li  style = "margin-top: 4.5em">
+                <ul><h3>Abcff;vnlnva feknfs fcncnK fCIOEWjcl csiOHNSLA</h3></ul>
+                <ul><h3>Abcff;vnlnva feknfs fcncnK fCIOEWjcl csiOHNSLA</h3></ul>
+                <ul><h3>Abcff;vnlnva feknfs fcncnK fCIOEWjcl csiOHNSLA</h3></ul>
+                <ul><h3>Abcff;vnlnva feknfs fcncnK fCIOEWjcl csiOHNSLA</h3></ul>
+            </li>
+        </p>>
+        <br>
+        <br>
     </div>
+
 </section>
 <!-- Breadcrumb Area End -->
 
@@ -80,7 +25,7 @@
 <div class="our-blog-area section-padding-100">
     <div class="container">
         {% for category, event_list in events.items %}
-        <h1 id="{{ category }}" >{{category}}</h1>
+        <h1 id="{{ category }}">{{category}}</h1>
         <div class="row">
             {% for event in event_list %}
 
@@ -89,22 +34,23 @@
                 <div class="single-blog-area style-2 wow fadeInUp" data-wow-delay="300ms">
                     <!-- Single blog Thumb -->
                     <div class="single-blog-thumb">
-                        <center>
-                        <img src="{{ event.image.url }}" alt="">
+                        <center><a href="{% url 'main_page:event_page' event.id  %}">
+                                <img src="{{ event.image.url }}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
                     <div class="single-blog-text text-center">
-                        <a class="blog-title" href="#">{{event.name}}</a>
+                        <a class="blog-title" href="{% url 'main_page:event_page' event.id  %}">{{event.name}}</a>
                         <!-- Post Meta -->
                         <div class="post-meta">
-                            <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i> January 14, 2019</a>
-                            <a class="post-author" href="#"><i class="zmdi zmdi-account"></i> Abhishek Gupta</a>
+                            <a class="post-date"><i class="zmdi zmdi-alarm-check"></i> {{event.start_date_time}}</a>
+                            <a class="post-author"><i class="zmdi zmdi-account"></i> {{event.coordinator.name}}</a>
                         </div>
-                        <p>{{event.description}}
-                        </p>
+                        <!-- <p>{{event.description}}
+                        </p> -->
                     </div>
                     <div class="blog-btn">
-                        <a href="{% url 'main_page:event_page' event.id  %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                        <a href="{% url 'main_page:event_page' event.id  %}"><i
+                                class="zmdi zmdi-long-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
