--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -46,14 +46,7 @@
                                 <li><a href="{% url 'main_page:index' %}">Home</a></li>
                                 <li><a href="{% url 'TSP:home' %}">TSP</a>
                                 </li>
-                                <li><a href="#Our_Team">Team</a></li>
-                                <li><a href="{% url 'main_page:events'%}">Events</a>
-                                    <ul class="dropdown">
-                                        {% for category in CATEGORY_CHOCIES %}
-                                        <li><a href="{% url 'main_page:events'%}">{{category.1}}</a></li>
-                                        {% endfor %}
-                                    </ul>
-                                </li>
+                                <li><a href="{% url 'main_page:events'%}">Events</a></li>
 
                                 <li><a href="{% url 'ca:home' %}">Campus Ambassador</a></li>
                             </ul>
