Change home image

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -15,7 +15,7 @@
         <div class="welcome-slides owl-carousel">
             <!-- Single Slide -->
             <div class="single-welcome-slide bg-img bg-overlay jarallax"
-                style="background-image: url(static/main_page/img/bg-img/coming_soon.jpg); opacity: 1;">
+                style="background-image: url(static/main_page/img/bg-img/coming_soon.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
@@ -152,7 +152,7 @@
                         <p> IIT's are not only the technological hubs of their regions but are also known for
                             amalgamating education with fun-filled extra-curricular activities.In this regard the IIT
                             Ropar organises its science and technology fest Advitiya whose third edition was organised
-                            last year. Continuing with that tradition; with immense pleasure and pride we please to
+                            last year. Continuing with that tradition with immense pleasure and pride we please to
                             announce Advitiya 2020. <br><br></p>
                         <!-- Single client Thumb and info --><br>
                         <div class="single-client-thumb-info d-flex align-items-center">
