--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -16,6 +16,13 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link href="{% static 'main_page/css/style.css' %}" rel="stylesheet">
     <title>{% block title %} Advitiya{%endblock%} </title>
+    <style>
+        @media only screen and (min-width: 980px) {
+            .resizeflex {
+                display: flex;
+            }
+        }
+    </style>
 </head>
 
 <body style="margin: 0;">
@@ -42,11 +49,12 @@
 
                         <!-- Nav Start -->
                         <div class="classynav">
-                            <ul id="nav" style="display: flex;">
+                            <ul id="nav" class="resizeflex">
                                 <li><a href="{% url 'main_page:index' %}">Home</a></li>
-                                <li><a href="{% url 'TSP:home' %}">TSP</a>
-                                </li>
+
                                 <li><a href="{% url 'main_page:events'%}">Events</a></li>
+                                
+                                <li><a href="{% url 'TSP:home' %}">TSP</a></li>
 
                                 <li><a href="{% url 'ca:home' %}">Campus Ambassador</a></li>
                                 {% if user.is_authenticated %}
@@ -63,9 +71,12 @@
 
                             <!-- Signing in -->
                             {% if not user.is_authenticated %}
-                            <a href="{% provider_login_url 'google' %}?next={% url 'main_page:index' %}"
+                            <!-- <a href="{% provider_login_url 'google' %}?next={% url 'main_page:index' %}"
                                 class="vcenter"><img src="{% static 'ca/img/gsignin.png' %}" class='gsignin-btn'
-                                    height="50px" width="50px" alt="" srcset=""></a>
+                                    height="50px" width="50px" alt="" srcset="">google</a> -->
+                            <a href="{% provider_login_url 'google' %}?next={% url 'main_page:index' %}"
+                                class="btn btn-secondary" style="margin-bottom: 3px;">
+                                <i class="fab fa-google"></i> Sign In</a>
                             {% endif %}
                         </div>
                     </div>
